# rayTracer

./: CMakeLists.txt
inc/: Ray.hpp  Vec3.hpp
src/: main.cpp
